# shamir39-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
