[package]
name = "shamir39-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = { version = "2.1.0", features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "portuguese", "spanish"] }
rand = "0.7.3"
shamir_secret_sharing = "0.1.1"
num-bigint = "0.2.6"
zeroize = "1.8.1"
